Resolving link sets, external resolves. Supporting primary and nested identifier and qualifiers. (#12)
